--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-snap": "^1.23.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "reactSnap": {
+    "waitFor": 1000,
+    "preconnectThirdParty": false,
+    "removeScriptTags": true
   },
   "eslintConfig": {
     "extends": [
